# legal-assistant-rag

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  audit.py  docker-compose.yml  mlflow.db  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
chroma_db/6c65fb04-258b-4d2b-91b3-58ad035518f5/: index_metadata.pickle
data/: 0000.parquet
data/processed/: chunks.json
data/raw/: corporate_law.txt  egyptian_laws.txt  egyptian_laws_metadata.json
frontend/: index.html  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/legal/: ChatInput.tsx  Footer.tsx  Header.tsx  LandingHeader.tsx  MessageBubble.tsx  Navbar.tsx  ResponseDisplay.tsx  SourceCard.tsx  TypingIndicator.tsx  WelcomeScreen.tsx
frontend/src/contexts/: LanguageContext.tsx
frontend/src/pages/: About.tsx  Index.tsx  Landing.tsx
scripts/: convert_data.py  ingest.py
services/ingestion/: Dockerfile
services/query/: Dockerfile
src/: __init__.py
src/api/: dependencies.py  exception_handlers.py  main.py
src/api/routers/: __init__.py  health.py  query.py
src/core/: __init__.py  config.py  exceptions.py  schemas.py
src/document_processing/: ingestion_pipeline.py
src/egyptian_law_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/evaluation/: experiment_runner.py  metrics.py  mlflow_tracker.py  ragas_evaluator.py
src/knowledge_base/: embeddings.py  indexer.py  vector_store.py
src/llm_providers/: llm_factory.py
src/query_engine/: __init__.py  query_pipeline.py  response_synthesizer.py  retriever.py
src/query_engine/chroma_db/: chroma.sqlite3
tests/: __init__.py
tests/e2e/: __init__.py
tests/fixtures/sample_documents/: sample_arabic_law.txt
tests/integration/: __init__.py
tests/unit/document_processing/: __init__.py
